<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="atau">Atau</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <string name="belum_punya_akun">Belum punya akun? </string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
</resources>